# Rayleigh-py

./: NOTES.txt  README.md  calculateMatrix.py  lambda_finder.py  mainrun.py  pyproject.toml  solver.py  structs.py
rayleigh/: __init__.py  calculateMatrix.py  clampedSolver.py  clamped_solver.py  constants.py  lambda_finder.py  mainrun.py  solver.py  structs.py
rayleigh_py.egg-info/: PKG-INFO  SOURCES.txt
tests/: beam_test.py  conftest.py  plate_test.py  struct_test.py
